--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -17,7 +17,7 @@
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
 	// "forwardPorts": [],
 
-	// Use 'postCreateCommand' to run commands after the container is created.
+	// Use 'postCreateCommand' to run commands after the container is crear conteted.
 	// "postCreateCommand": "pip3 install --user -r requirements.txt",
 
 }
